docs/7.56/md/abennews-751.md
  

* * *

AS ABAP Release 756, ©Copyright 2021 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap.htm) →  [ABAP - Release News](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews.htm) →  [News for Release 7.5x](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-75.htm) → 

News for Release 7.51

The kernel release for Release 7.51 is 7.49.

-   [Enumerated Types in Release 7.51](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-751-types.htm)
-   [Assignments in Release 7.51](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-751-assignments.htm)
-   [ABAP SQL in Release 7.51](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-751-abap_sql.htm)
-   [ABAP CDS in Release 7.51](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-751-abap_cds.htm)
-   [AMDP in Release 7.51](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-751-amdp.htm)
-   [Data Clusters in Release 7.51](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-751-data_cluster.htm)
-   [Messages in Release 7.51](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-751-messages.htm)
-   [Transformations in Release 7.51](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-751-transformations.htm)
-   [ABAP Channels in Release 7.51](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-751-channels.htm)
-   [Further Changes in Release 7.51](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-751-others.htm)

Continue
[Enumerated Types in Release 7.51](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-751-types.htm)
[Assignments in Release 7.51](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-751-assignments.htm)
[ABAP SQL in Release 7.51](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-751-abap_sql.htm)
[ABAP CDS in Release 7.51](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-751-abap_cds.htm)
[AMDP in Release 7.51](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-751-amdp.htm)
[Data Clusters in Release 7.51](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-751-data_cluster.htm)
[Messages in Release 7.51](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-751-messages.htm)
[Transformations in Release 7.51](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-751-transformations.htm)
[ABAP Channels in Release 7.51](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-751-channels.htm)
[Further Changes in Release 7.51](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-751-others.htm)